[package]
name = "lapi_wasm"
description = "WebAssembly for Lapi."
version = "0.0.1"
authors = ["Luke Shay <https://github.com/lukeshay>"]
repository = "https://github.com/lukeshay/lapi"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"
rust-argon2 = "0.8"

[lib]
name = "lapi_wasm"
path = "src/lib.rs"
crate-type =["cdylib"]